--- a/index.html
+++ b/index.html
@@ -441,6 +441,12 @@
         <p>A form-based web project for managing student admissions digitally.</p>
         <a href="https://github.com/asjadafrahim04/Student-Admission-Form-" target="_blank">View on GitHub</a>
       </div>
+
+      <div class="project">
+        <h4>Smart Audio Book</h4>
+        <p>Convert PDF files into speech easily using Python, so you can listen and learn anywhere, anytime. using pyttsx3 and PyPDF2.</p>
+        <a href="https://github.com/asjadafrahim04/Smart-Audio-Book.git" target="_blank">View on GitHub</a>
+      </div>
     </div>
   </section>
 
