--- a/index.html
+++ b/index.html
@@ -5,326 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Asjad Ahmed Afrahim — Portfolio</title>
   <meta name="description" content="Portfolio of Asjad Ahmed Afrahim" />
-
-  <style>
-    :root {
-      --bg: #f5f7ff;
-      --blue: #0066ff;
-      --dark: #05081a;
-      --text: #333;
-      --card: #eaf0ff;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-    }
-
-    body {
-      font-family: "Segoe UI", Arial, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
-    }
-
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1.2rem 5%;
-      background: white;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-      position: sticky;
-      top: 0;
-      z-index: 10;
-    }
-
-    header h1 {
-      font-size: 1.3rem;
-      color: var(--dark);
-    }
-
-    nav a {
-      margin-left: 1.5rem;
-      text-decoration: none;
-      color: var(--text);
-      font-weight: 500;
-    }
-
-    nav a:hover {
-      color: var(--blue);
-    }
-
-    /* ---------- Intro Section ---------- */
-    #intro {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      padding: 4rem 8%;
-      background: white;
-    }
-
-    #intro .text {
-      flex: 1 1 55%;
-    }
-
-    #intro h2 {
-      font-size: 2.2rem;
-      color: var(--dark);
-      margin-bottom: 1rem;
-    }
-
-    #intro h2 span {
-      color: var(--blue);
-    }
-
-    #intro p {
-      margin-bottom: 1.5rem;
-      font-size: 1rem;
-      max-width: 90%;
-    }
-
-    #intro .buttons {
-      display: flex;
-      gap: 1rem;
-    }
-
-    #intro .buttons a {
-      display: inline-block;
-      background: var(--blue);
-      color: white;
-      padding: 0.7rem 1.2rem;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    #intro .buttons a:hover {
-      background: #004bcc;
-    }
-
-    #intro .photo {
-      flex: 1 1 35%;
-      text-align: center;
-    }
-
-    #intro .photo img {
-      width: 100%;
-      max-width: 320px;
-      border-radius: 15px;
-      background: var(--card);
-      padding: 10px;
-    }
-
-    /* ---------- About Section ---------- */
-    #about {
-      padding: 3rem 8%;
-      background: #ffffff;
-    }
-
-    #about h3 {
-      color: var(--dark);
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
-    }
-
-    #about p {
-      max-width: 800px;
-      margin-bottom: 1rem;
-      font-size: 1rem;
-    }
-
-    /* ---------- Skills Section ---------- */
-    #skills {
-      padding: 3rem 8%;
-      background: var(--card);
-    }
-
-    #skills h3 {
-      color: var(--dark);
-      font-size: 1.8rem;
-      margin-bottom: 1.5rem;
-      text-align: left;
-    }
-
-    #skills h4 {
-      color: var(--blue);
-      font-size: 1.5rem;
-      margin: 1.5rem 0 1rem 0;
-    }
-
-    .skills-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-    }
-
-    .skill-box {
-      background: white;
-      color: var(--dark);
-      padding: 0.7rem 1rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      font-size: 1rem;
-      font-weight: 500;
-      text-align: center;
-      cursor: default;
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-
-    .skill-box:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-
-    /* ---------- Projects Section ---------- */
-    #projects {
-      padding: 4rem 8%;
-      background: var(--card);
-    }
-
-    #projects h3 {
-      color: var(--dark);
-      font-size: 1.8rem;
-      margin-bottom: 1.5rem;
-    }
-
-    .project-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-    }
-
-    .project {
-      background: white;
-      padding: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-    }
-
-    .project h4 {
-      color: var(--blue);
-      margin-bottom: 0.5rem;
-    }
-
-    .project p {
-      font-size: 0.95rem;
-      margin-bottom: 0.8rem;
-    }
-
-    .project a {
-      text-decoration: none;
-      color: var(--blue);
-      font-weight: 500;
-    }
-
-    .project a:hover {
-      text-decoration: underline;
-    }
-
-    /* ---------- Contact Section ---------- */
-    #contact {
-      padding: 4rem 8%;
-      background: #ffffff;
-    }
-
-    #contact h3 {
-      text-align: center;
-      font-size: 1.8rem;
-      color: var(--dark);
-      margin-bottom: 2rem;
-    }
-
-    .contact-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      gap: 2rem;
-    }
-
-    .contact-info {
-      flex: 1 1 40%;
-    }
-
-    .contact-info p {
-      font-size: 1rem;
-      margin-bottom: 1rem;
-    }
-
-    .contact-info a {
-      color: var(--blue);
-      text-decoration: none;
-    }
-
-    .contact-info a:hover {
-      text-decoration: underline;
-    }
-
-    .social-icons {
-      margin-top: 1rem;
-    }
-
-    .social-icons a img {
-      width: 24px;
-      margin: 0 8px;
-      vertical-align: middle;
-    }
-
-    .contact-form {
-      flex: 1 1 50%;
-      background: var(--card);
-      padding: 1.5rem;
-      border-radius: 10px;
-    }
-
-    .contact-form form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-
-    .contact-form input,
-    .contact-form textarea {
-      width: 100%;
-      padding: 0.8rem;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 1rem;
-    }
-
-    .contact-form textarea {
-      resize: vertical;
-      height: 120px;
-    }
-
-    .contact-form button {
-      align-self: center;
-      background: var(--blue);
-      color: white;
-      border: none;
-      padding: 0.8rem 2rem;
-      border-radius: 6px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .contact-form button:hover {
-      background: #004bcc;
-    }
-
-    @media (max-width: 768px) {
-      .skills-row {
-        flex-direction: column;
-      }
-      .contact-container {
-        flex-direction: column;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -478,6 +159,10 @@
       </div>
     </div>
   </section>
+
+  <footer>
+    Designed and Developed by-Asjad Ahmed Afrahim
+  </footer>
 
 </body>
 </html>
