--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       </div>
 
       <div class="social-icons">
-        <a href="https://www.facebook.com/share/17Y8KS79SB/"><img src="facebookIcon.svg" alt="Facebook"></a>
-        <a href="https://instagram.com/asjad_afrahim_04"><img src="instagramIcon.svg" alt="Instagram"></a>
-        <a href="https://github.com/asjadafrahim04"><img src="gitHubIcon.svg" alt="GitHub"></a>
-        <a href="https://www.linkedin.com/in/asjadahmedafrahim/"><img src="linkedinIcon.svg" alt="LinkedIn"></a>
+        <a href="https://www.facebook.com/share/17Y8KS79SB/" target="_blank"><img src="facebookIcon.svg" alt="Facebook"></a>
+        <a href="https://instagram.com/asjad_afrahim_04" target="_blank"><img src="instagramIcon.svg" alt="Instagram"></a>
+        <a href="https://github.com/asjadafrahim04" target="_blank"><img src="gitHubIcon.svg" alt="GitHub"></a>
+        <a href="https://www.linkedin.com/in/asjadahmedafrahim/" target="_blank"><img src="linkedinIcon.svg" alt="LinkedIn"></a>
       </div>
     </div>
 
@@ -68,14 +68,16 @@
     <div class="skills-row">
       <div class="skill-box">Python</div>
       <div class="skill-box">Java</div>
-      <div class="skill-box">C++</div>
-      <div class="skill-box">Android Studio</div>
+      <div class="skill-box">C/C++</div>
+      <div class="skill-box">HTML</div>
+      <div class="skill-box">CSS</div>
       <div class="skill-box">VS Code</div>
       <div class="skill-box">Git & GitHub</div>
       <div class="skill-box">Figma</div>
       <div class="skill-box">UI/UX Design</div>
       <div class="skill-box">Web Development</div>
       <div class="skill-box">Problem Solving</div>
+      <div class="skill-box">Android Studio</div>
     </div>
 
     <!-- Professional Skills Row -->
@@ -86,6 +88,8 @@
       <div class="skill-box">Project Management</div>
       <div class="skill-box">User-Centered Design</div>
       <div class="skill-box">Innovation & Creativity</div>
+      <div class="skill-box">Analytical Thinking</div>
+      <div class="skill-box">Time Management</div>
     </div>
   </section>
 
@@ -96,7 +100,7 @@
       <div class="project">
         <h4>BMI Calculator</h4>
         <p>An Android app that calculates Body Mass Index based on user input.</p>
-        <a href="#" target="_blank">View on GitHub</a>
+        <a href="https://github.com/ShahrinSamah/BMI-Calculator.git" target="_blank">View on GitHub</a>
       </div>
 
       <div class="project">
@@ -108,13 +112,13 @@
       <div class="project">
         <h4>Invoice Generator</h4>
         <p>A web tool to quickly generate invoices.</p>
-        <a href="https://github.com/asjadafrahim04/Invoice-Generator-By-Python--" target="_blank">View on GitHub</a>
+        <a href="https://github.com/asjadafrahim04/Invoice-Generator-By-Python-.git" target="_blank">View on GitHub</a>
       </div>
 
       <div class="project">
         <h4>Libarary Management System</h4>
         <p>A web tool to manage a library.</p>
-        <a href="https://github.com/asjadafrahim04/Library-Managment-System-By-C-" target="_blank">View on GitHub</a>
+        <a href="https://github.com/asjadafrahim04/Library-Managment-System-By-C.git" target="_blank">View on GitHub</a>
       </div>
 
       <div class="project">
@@ -137,14 +141,14 @@
     <div class="contact-container">
       <!-- Left Column -->
       <div class="contact-info">
-        <p>📧 Email: <a href="mailto:asjadafrahim04@gmail.com">asjadafrahim04@gmail.com</a></p>
-        <p>📞 Phone: +880 1700 000000</p>
+        <p>📧 Email: <a href="mailto:asjadafrahim04@gmail.com" target="_blank">asjadafrahim04@gmail.com</a></p>
+        <p>📞 Phone: +880 164321-7841</p>
 
         <div class="social-icons">
-          <a href="https://www.facebook.com/share/17Y8KS79SB/"><img src="facebookIcon.svg" alt="Facebook"></a>
-          <a href="https://instagram.com/asjad_afrahim_04"><img src="instagramIcon.svg" alt="Instagram"></a>
-          <a href="https://github.com/asjadafrahim04"><img src="gitHubIcon.svg" alt="GitHub"></a>
-          <a href="https://www.linkedin.com/in/asjadahmedafrahim/"><img src="linkedinIcon.svg" alt="LinkedIn"></a>
+          <a href="https://www.facebook.com/share/17Y8KS79SB/" target="_blank"><img src="facebookIcon.svg" alt="Facebook"></a>
+          <a href="https://instagram.com/asjad_afrahim_04" target="_blank"><img src="instagramIcon.svg" alt="Instagram"></a>
+          <a href="https://github.com/asjadafrahim04" target="_blank"><img src="gitHubIcon.svg" alt="GitHub"></a>
+          <a href="https://www.linkedin.com/in/asjadahmedafrahim/" target="_blank"><img src="linkedinIcon.svg" alt="LinkedIn"></a>
         </div>
       </div>
 
