--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Asjad Ahmed Afrahim — Portfolio</title>
   <meta name="description" content="Portfolio of Asjad Ahmed Afrahim" />
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/be011eb5b0.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
   <header>
@@ -23,9 +26,10 @@
   <!-- Intro Section -->
   <section id="intro">
     <div class="text">
-      <h2>Hi, I'm <span>Asjad Ahmed Afrahim</span> 👋</h2>
+      <h2>Hi, I'm <span>Asjad Ahmed Afrahim</span> </h2>
       <p>
-        Software Engineering student at Metropolitan University. I build Android apps, craft web experiences, and research security in AI. I love turning ideas into clean, usable products.
+        Software Engineering student at Metropolitan University. I build Android apps, craft web experiences, and
+        research security in AI. I love turning ideas into clean, usable products.
       </p>
 
       <div class="buttons">
@@ -33,10 +37,13 @@
       </div>
 
       <div class="social-icons">
-        <a href="https://www.facebook.com/share/17Y8KS79SB/" target="_blank"><img src="facebookIcon.svg" alt="Facebook"></a>
-        <a href="https://instagram.com/asjad_afrahim_04" target="_blank"><img src="instagramIcon.svg" alt="Instagram"></a>
+        <a href="https://www.facebook.com/share/17Y8KS79SB/" target="_blank"><img src="facebookIcon.svg"
+            alt="Facebook"></a>
+        <a href="https://instagram.com/asjad_afrahim_04" target="_blank"><img src="instagramIcon.svg"
+            alt="Instagram"></a>
         <a href="https://github.com/asjadafrahim04" target="_blank"><img src="gitHubIcon.svg" alt="GitHub"></a>
-        <a href="https://www.linkedin.com/in/asjadahmedafrahim/" target="_blank"><img src="linkedinIcon.svg" alt="LinkedIn"></a>
+        <a href="https://www.linkedin.com/in/asjadahmedafrahim/" target="_blank"><img src="linkedinIcon.svg"
+            alt="LinkedIn"></a>
       </div>
     </div>
 
@@ -49,14 +56,17 @@
   <section id="about">
     <h3>About Me</h3>
     <p>
-      I’m a passionate Software Engineering student at Metropolitan University, constantly learning and improving my skills in full stack development. I’ve completed courses in UI/UX design, web development, and mobile app development.
+      I’m a passionate Software Engineering student at Metropolitan University, constantly learning and improving my
+      skills in full stack development. I’ve completed courses in UI/UX design, web development, and mobile app
+      development.
     </p>
     <p>
-      I’m proficient in Python, Java, and C++, and I use tools like Android Studio, VS Code, Git/GitHub, and Figma. I have strong design and problem-solving abilities.
+      I’m proficient in Python, Java, and C++, and I use tools like Android Studio, VS Code, Git/GitHub, and Figma. I
+      have strong design and problem-solving abilities.
     </p>
-    <p>
+    <!-- <p>
       I’m also the founder of <strong>NexolveIT</strong>, a tech startup dedicated to delivering smart, scalable IT solutions. At NexolveIT, I mainly manage the UI/UX sector to ensure top-quality digital experiences.
-    </p>
+    </p> -->
   </section>
 
   <!-- Skills Section -->
@@ -66,18 +76,19 @@
     <!-- Technical Skills Row -->
     <h4>Technical Skills</h4>
     <div class="skills-row">
-      <div class="skill-box">Python</div>
-      <div class="skill-box">Java</div>
-      <div class="skill-box">C/C++</div>
-      <div class="skill-box">HTML</div>
-      <div class="skill-box">CSS</div>
-      <div class="skill-box">VS Code</div>
-      <div class="skill-box">Git & GitHub</div>
-      <div class="skill-box">Figma</div>
-      <div class="skill-box">UI/UX Design</div>
-      <div class="skill-box">Web Development</div>
-      <div class="skill-box">Problem Solving</div>
-      <div class="skill-box">Android Studio</div>
+      <div class="skill-box"> <img src="./icon/icons8-python-48.svg" alt="" width="30px" height="30px" > <br> Python</div>
+      <div class="skill-box"> <img src="./icon/icons8-java-30.svg" alt=""><br> Java</div>
+      <div class="skill-box"> <img src="./icon/icons8-c++.svg" alt="" width="30px" height="30px"> <br> C/C++</div>
+      <div class="skill-box"> <img src="./icon/icons8-html-30.svg" alt=""> <br> HTML</div>
+      <div class="skill-box"> <img src="./icon/icons8-css-30.svg" alt=""> <br> CSS</div>
+      <div class="skill-box"> <img width="30" height="30" src="https://img.icons8.com/color/48/javascript--v1.png" alt="javascript--v1"/> <br> JavaScript</div>
+      <div class="skill-box"> <img src="./icon/icons8-vs-code-30.svg" alt=""> <br> VS Code</div>
+      <div class="skill-box"> <img src="./icon/icons8-figma-30.svg" alt=""> <br> Figma</div> 
+      <div class="skill-box"> <img src="./icon/icons8-github.svg" alt="" width="30px" height="30px"> <br> Git & GitHub</div>
+      <div class="skill-box"> <img width="30" height="30" src="https://img.icons8.com/fluency/48/web-design--v1.png" alt="web-design--v1"/> <br> UI/UX Design</div>
+      <div class="skill-box"> <img width="30" height="30" src="https://img.icons8.com/color/48/backend-development--v1.png" alt="backend-development--v1"/><br> Web Development</div>
+      <div class="skill-box"><img width="30" height="30" src="https://img.icons8.com/color/48/creativity-and-resourcefulness.png" alt="creativity-and-resourcefulness"/> <br> Problem Solving</div>
+      <div class="skill-box"><img width="30" height="30" src="https://img.icons8.com/color/48/android-studio--v2.png" alt="android-studio--v2"/><br> Android Studio</div>
     </div>
 
     <!-- Professional Skills Row -->
@@ -85,7 +96,7 @@
     <div class="skills-row">
       <div class="skill-box">UI/UX Sector Management</div>
       <div class="skill-box">Leadership & Collaboration</div>
-      <div class="skill-box">Project Management</div>
+      <div class="skill-box"> Project Management</div>
       <div class="skill-box">User-Centered Design</div>
       <div class="skill-box">Innovation & Creativity</div>
       <div class="skill-box">Analytical Thinking</div>
@@ -129,7 +140,8 @@
 
       <div class="project">
         <h4>Smart Audio Book</h4>
-        <p>Convert PDF files into speech easily using Python, so you can listen and learn anywhere, anytime. using pyttsx3 and PyPDF2.</p>
+        <p>Convert PDF files into speech easily using Python, so you can listen and learn anywhere, anytime. using
+          pyttsx3 and PyPDF2.</p>
         <a href="https://github.com/asjadafrahim04/Smart-Audio-Book.git" target="_blank">View on GitHub</a>
       </div>
     </div>
@@ -145,10 +157,13 @@
         <p>📞 Phone: +880 164321-7841</p>
 
         <div class="social-icons">
-          <a href="https://www.facebook.com/share/17Y8KS79SB/" target="_blank"><img src="facebookIcon.svg" alt="Facebook"></a>
-          <a href="https://instagram.com/asjad_afrahim_04" target="_blank"><img src="instagramIcon.svg" alt="Instagram"></a>
+          <a href="https://www.facebook.com/share/17Y8KS79SB/" target="_blank"><img src="facebookIcon.svg"
+              alt="Facebook"></a>
+          <a href="https://instagram.com/asjad_afrahim_04" target="_blank"><img src="instagramIcon.svg"
+              alt="Instagram"></a>
           <a href="https://github.com/asjadafrahim04" target="_blank"><img src="gitHubIcon.svg" alt="GitHub"></a>
-          <a href="https://www.linkedin.com/in/asjadahmedafrahim/" target="_blank"><img src="linkedinIcon.svg" alt="LinkedIn"></a>
+          <a href="https://www.linkedin.com/in/asjadahmedafrahim/" target="_blank"><img src="linkedinIcon.svg"
+              alt="LinkedIn"></a>
         </div>
       </div>
 
@@ -169,4 +184,5 @@
   </footer>
 
 </body>
+
 </html>
